plugins {
    id 'java'
    id 'application'
}

group   = 'ar.edu.itba.ssshare'
version = '0.1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
}

application {
    mainClass = 'ar.edu.itba.ssshare.Main'
}

test {
    useJUnitPlatform()
}
